# Hybrid-Search-Rag

./: .dockerignore  .env.example  .gitignore  .vercelignore  Dockerfile  README.md  docker-compose.yml  package.json  pyproject.toml  requirements-vercel.txt  vercel.json
.github/workflows/: ci.yml
api/: index.py  requirements.txt
backend/app/: main.py
backend/experiments/: bm25_search.py  cosine_similarity.py  hybrid_search.py  semantic_search.py
backend/scripts/: api_end_to_end_smoke_test.py  evaluate_fusion_weights.py  evaluate_retrieval.py  grounded_answer_smoke_test.py  prepare_evaluation_corpus.py  qdrant_smoke_test.py  validate_evaluation_dataset.py
backend/tests/: test_acceptance_script.py  test_answer_routes.py  test_api_key_auth.py  test_chunker.py  test_ci_configuration.py  test_config.py  test_container_configuration.py  test_context_assembler.py  test_dense_search_service.py  test_dependencies.py  test_dependency_lifecycle.py  test_deployment_configuration.py  test_deterministic_generation_provider.py  test_document_indexing_service.py  test_document_management_service.py  test_document_routes.py  test_docx_loader.py  test_embedding_service.py  test_evaluate_retrieval_cli.py  test_evaluation_loader.py  test_fusion_weight_evaluation.py  test_health.py  (+31 more)
frontend/: .dockerignore  .env.example  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.tsbuildinfo  tsconfig.node.json  tsconfig.node.tsbuildinfo
scripts/: fullstack_smoke.py  prepare_vercel_static.mjs  vercel_bundle_audit.py
(+162 files in other folders)
