[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hybrid-search-rag"
version = "0.1.0"
description = "A hybrid retrieval-augmented generation system for internal documents."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "sentence-transformers==5.6.0",
]

[project.optional-dependencies]
dev = []

[tool.setuptools]
packages = []