[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hybrid-search-rag"
version = "0.1.0"
description = "A hybrid retrieval-augmented generation system for internal documents."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115,<1.0",
    "openai>=1.99,<3.0",
    "pydantic-settings>=2.7,<3.0",
    "pypdf>=6.0,<7.0",
    "qdrant-client>=1.14,<2.0",
    "python-docx>=1.2,<2.0",
    "python-multipart>=0.0.20,<1.0",
    "sentence-transformers==5.6.0",
    "uvicorn[standard]>=0.34,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx2>=2.0,<3.0",
    "pytest>=8.3,<9.0",
    "reportlab>=4.2,<5.0",
    "ruff>=0.9,<1.0",
]

[tool.setuptools.packages.find]
where = ["backend"]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]
addopts = "-ra"

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["backend"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]
